--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
+    "build":"next build",
     "start": "pm2 start index.js"
   },
   "dependencies": {
