--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "pm2": "^5.3.0",
     "sequelize": "^6.35.0"
   },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
